--- a/app/src/main/res/layout/activity_pet_shop.xml
+++ b/app/src/main/res/layout/activity_pet_shop.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ListView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/shop_deals_listview"
+    android:id="@+id/listview_petShopDeals"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="5dp"
+    android:paddingTop="10dp"
+    android:paddingLeft="7dp"
+    android:paddingRight="7dp"
+    android:paddingBottom="7dp"
     android:drawSelectorOnTop="true"
     android:divider="@android:color/transparent"
     android:dividerHeight="10dp"
