--- a/app/src/main/res/layout/activity_petcare_service.xml
+++ b/app/src/main/res/layout/activity_petcare_service.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ListView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/listview_petCareservice"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/my_pets_listview"
-    tools:context="com.ahmedbass.mypetfriend.MyPetsActivity"
-    android:padding="10dp"
+    android:paddingTop="10dp"
+    android:paddingLeft="7dp"
+    android:paddingRight="7dp"
+    android:paddingBottom="7dp"
     android:drawSelectorOnTop="true"
     android:divider="@android:color/transparent"
-    android:dividerHeight="10dp">
+    android:dividerHeight="10dp"
+    android:background="@color/nice_gray"
+    tools:context="com.ahmedbass.mypetfriend.PetCareServiceActivity">
 
 </ListView>
+
+
