--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -26,7 +26,8 @@
                 android:ems="10"
                 android:id="@+id/firstname_etxt"
                 android:hint="First name"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:selectAllOnFocus="false" />
 
             <EditText
                 android:layout_width="0dp"
@@ -34,7 +35,8 @@
                 android:inputType="textPersonName"
                 android:id="@+id/lastname_etxt"
                 android:hint="Last name"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:selectAllOnFocus="false" />
         </LinearLayout>
 
         <EditText
@@ -43,7 +45,8 @@
             android:inputType="textEmailAddress"
             android:id="@+id/email_etxt"
             android:hint="Email"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="10dp"
+            android:selectAllOnFocus="false" />
 
         <EditText
             android:layout_width="match_parent"
@@ -52,7 +55,8 @@
             android:fontFamily="sans-serif"
             android:id="@+id/password_etxt"
             android:hint="Password (at least 6 characters)"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="10dp"
+            android:selectAllOnFocus="true" />
 
         <AutoCompleteTextView
             android:layout_width="match_parent"
@@ -60,31 +64,33 @@
             android:inputType="textAutoComplete"
             android:id="@+id/location_etxt"
             android:hint="Location: City, Country"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="10dp"
+            android:selectAllOnFocus="true" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Date of Birth:"
-            android:layout_gravity="start"
-            android:layout_marginTop="12dp"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp">
+            android:layout_marginTop="12dp"
+            android:gravity="center">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Birth Date:"
+                android:layout_marginRight="5dp"
+                android:layout_marginEnd="5dp"/>
             <Spinner
                 android:id="@+id/monthPick_spr"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:entries="@array/months"
-                android:layout_weight="2"/>
+                android:layout_weight="1"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="/"
-                android:layout_marginStart="3dp"
-                android:layout_marginEnd="3dp"/>
+                android:layout_marginStart="1dp"
+                android:layout_marginEnd="1dp"/>
 
             <EditText
                 android:id="@+id/dayPick_etxt"
@@ -92,14 +98,15 @@
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:hint="Day"
+                android:gravity="center"
                 android:ems="2"
-                android:layout_weight="1"/>
+                android:selectAllOnFocus="true" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="/"
-                android:layout_marginStart="3dp"
-                android:layout_marginEnd="3dp"/>
+                android:layout_marginStart="1dp"
+                android:layout_marginEnd="1dp"/>
 
             <EditText
                 android:id="@+id/yearPick_etxt"
@@ -107,26 +114,29 @@
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:hint="Year"
-                android:ems="4"
-                android:layout_weight="1" />
+                android:gravity="center"
+                android:selectAllOnFocus="true"
+                android:ems="3" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp">
+            android:layout_marginTop="12dp"
+            android:gravity="center">
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Gender:"/>
+                android:text="Gender:"
+                android:layout_marginRight="5dp"
+                android:layout_marginEnd="5dp"
+                android:layout_weight="1"/>
 
             <RadioGroup
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_weight="1"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp">
+                android:layout_weight="2.5">
                 <RadioButton
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -143,23 +153,24 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp">
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="10dp"
+            android:gravity="center">
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="User Type:"
                 android:id="@+id/usertype_txt"
-                android:layout_gravity="start"/>
+                android:layout_marginRight="5dp"
+                android:layout_marginEnd="5dp"
+                android:layout_weight="1"/>
 
             <RadioGroup
                 android:id="@+id/usertype_rgrp"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
-                android:layout_marginBottom="10dp"
-                android:layout_weight="1">
+                android:layout_weight="2.5">
 
                 <RadioButton
                     android:id="@+id/petOwner_rbtn"
@@ -182,16 +193,18 @@
             android:layout_height="wrap_content"
             android:text="Sign Up"
             android:id="@+id/register_btn"
-            android:layout_margin="10dp"/>
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Already have an account?"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="5dp"
+            android:layout_margin="5dp"
             android:onClick="moveToSignIn"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="@color/colorPrimaryDark"/>
+            android:textColor="@color/colorAccentDark"/>
     </LinearLayout>
 </ScrollView>
