--- a/app/src/main/res/drawable/mypets_list_background.xml
+++ b/app/src/main/res/drawable/mypets_list_background.xml
@@ -2,16 +2,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape= "rectangle">
 
-    <corners android:radius="5dp" />
+    <corners android:radius="10dp" />
 
     <gradient
-        android:angle="45"
-        android:endColor="@color/colorAccent"
-        android:centerColor="@color/colorAccentLight"
-        android:startColor="@color/colorAccentLight"/>
-
-    <stroke
-        android:color="@color/colorAccent"
-        android:width="1dp"/>
+        android:angle="90"
+        android:startColor="@color/colorAccent"
+        android:centerColor="@color/colorAccent"
+        android:endColor="@color/colorAccentLight"/>
 
 </shape>
