--- a/app/src/main/res/layout/activity_advert.xml
+++ b/app/src/main/res/layout/activity_advert.xml
@@ -20,8 +20,8 @@
             android:layout_width="wrap_content"
             android:layout_height="200dp"
             android:src="@drawable/dog_img"
-            android:background="@android:color/darker_gray"
-            android:padding="3dp"
+            android:background="@color/nice_light_gray"
+            android:padding="2dp"
             android:cropToPadding="true"
             android:scaleType="centerInside"
             android:layout_margin="5dp"/>
@@ -45,6 +45,7 @@
             android:layout_height="wrap_content"
             android:text="Key Information"
             android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/colorPrimaryDark"
             android:textSize="20sp"
             android:fontFamily="serif"
             android:layout_marginTop="5dp"
@@ -66,7 +67,6 @@
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Price: "
                 android:layout_margin="5dp"
                 android:layout_row="0"
@@ -76,7 +76,6 @@
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Pet Type: "
                 android:layout_margin="5dp"
                 android:layout_row="1"
@@ -85,7 +84,6 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Pet Breed:"
                 android:id="@+id/textView5"
                 android:layout_margin="5dp"
@@ -95,7 +93,6 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Pets Age:"
                 android:id="@+id/textView6"
                 android:layout_margin="5dp"
@@ -106,7 +103,6 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Microchipped:"
                 android:id="@+id/textView7"
                 android:layout_margin="5dp"
@@ -116,7 +112,6 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Neutered:"
                 android:id="@+id/textView8"
                 android:layout_margin="5dp"
@@ -126,7 +121,6 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Vaccinations:"
                 android:id="@+id/textView9"
                 android:layout_margin="5dp"
@@ -138,7 +132,6 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/price_txt"
                 android:text="Enter Price"
-                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:layout_margin="5dp"
                 android:layout_row="0"
                 android:layout_column="1"
@@ -149,7 +142,6 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/pet_type_txt"
                 android:text="Enter Pet Type"
-                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:layout_margin="5dp"
                 android:layout_row="1"
                 android:layout_column="1"
@@ -160,7 +152,6 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/pet_breed_txt"
                 android:text="Enter Pet Breed"
-                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:layout_margin="5dp"
                 android:layout_row="2"
                 android:layout_column="1"/>
@@ -170,7 +161,6 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/pet_Age_txt"
                 android:text="Enter Pets Age"
-                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:layout_margin="5dp"
                 android:layout_row="3"
                 android:layout_column="1"/>
@@ -180,7 +170,6 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/pet_microchipped_txt"
                 android:text="Is Microchipped?"
-                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:layout_margin="5dp"
                 android:layout_row="4"
                 android:layout_column="1"/>
@@ -190,7 +179,6 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/pet_neutered_txt"
                 android:text="Is Neutered?"
-                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:layout_margin="5dp"
                 android:layout_row="5"
                 android:layout_column="1"/>
@@ -200,7 +188,6 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/pet_vaccination_txt"
                 android:text="Is Vaccinated?"
-                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:layout_margin="5dp"
                 android:layout_row="6"
                 android:layout_column="1"/>
@@ -211,6 +198,7 @@
             android:layout_height="wrap_content"
             android:text="Full Details"
             android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/colorPrimaryDark"
             android:textSize="20sp"
             android:fontFamily="serif"
             android:layout_marginTop="10dp"
@@ -223,7 +211,6 @@
             android:padding="10dp"
             android:layout_margin="5dp"
             android:background="@android:color/background_light"
-            android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Long or short paragraph to describe
             \ncomprehensively the deal and the available pets and/or tools offered
              \nin it. it can be as long as the user wants, they can
@@ -242,6 +229,7 @@
             android:layout_height="wrap_content"
             android:text="Contact the Seller"
             android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/colorPrimaryDark"
             android:textSize="20sp"
             android:fontFamily="serif"
             android:layout_marginTop="5dp"
@@ -261,8 +249,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Seller Name"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textStyle="bold"
+                android:textColor="@color/primaryText"
                 android:layout_marginBottom="10dp"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"/>
