--- a/app/src/main/res/layout/activity_pet_care_provider_registeration.xml
+++ b/app/src/main/res/layout/activity_pet_care_provider_registeration.xml
@@ -19,7 +19,7 @@
         <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@android:color/darker_gray"
+            android:background="@color/colorAccent"
             android:layout_marginBottom="10dp"
             android:elevation="2dp">
             <ImageButton
@@ -52,7 +52,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Your Bio"
-            android:textColor="@color/primaryText"/>
+            android:fontFamily="serif"
+            android:textColor="@color/colorPrimaryDark"/>
 
         <EditText
             android:id="@+id/profileTitle_etxt"
@@ -67,13 +68,15 @@
             android:inputType="textMultiLine"
             android:gravity="bottom"
             android:layout_marginTop="5dp"
-            android:hint="Description: briefly describe your pet care experience and qualifications."/>
+            android:hint="Description: tell a little about yourself and describe your pet care experience and qualifications."
+            android:selectAllOnFocus="true" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Contact Information"
-            android:textColor="@color/primaryText"
+            android:textColor="@color/colorPrimaryDark"
+            android:fontFamily="serif"
             android:layout_marginTop="15dp"/>
 
         <LinearLayout
@@ -96,20 +99,21 @@
         </LinearLayout>
         </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@color/primaryTextWhite"
-        android:elevation="2dp"
-        android:padding="10dp"
-        android:layout_marginTop="20dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@color/primaryTextWhite"
+            android:elevation="2dp"
+            android:padding="10dp"
+            android:layout_marginTop="20dp">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Experience and Salary"
-                android:textColor="@color/primaryText"/>
+                android:fontFamily="serif"
+                android:textColor="@color/colorPrimaryDark"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -158,6 +162,23 @@
                     android:layout_weight="1"
                     android:gravity="center_horizontal"/>
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Availability:"/>
+                <Spinner
+                    android:id="@+id/availability_spnr"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:entries="@array/availability"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginLeft="10dp"/>
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
@@ -172,7 +193,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Aditional Information"
-                android:textColor="@color/primaryText" />
+                android:fontFamily="serif"
+                android:textColor="@color/colorPrimaryDark" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -207,7 +229,60 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
-                android:text="Pet care services provided:"/>
+                android:text="Service provided for:"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center">
+                <CheckBox
+                    android:id="@+id/catService_chk"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Cats"
+                    android:layout_weight="1"/>
+                <CheckBox
+                    android:id="@+id/dogService_chk"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Dogs"
+                    android:layout_weight="1"/>
+                <CheckBox
+                    android:id="@+id/farmAnimalService_chk"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Small Animals"
+                    android:layout_weight="1.3"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center">
+                <CheckBox
+                    android:id="@+id/horseService_chk"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Horses"/>
+                <CheckBox
+                    android:id="@+id/birdService_chk"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Birds"
+                    android:layout_weight="1"/>
+                <CheckBox
+                    android:id="@+id/fishService_chk"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Other Animals"
+                    android:layout_weight="1.3" />
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="Services provided:"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -254,59 +329,6 @@
                     android:layout_height="wrap_content"
                     android:text="Boarding"
                     android:layout_weight="1"/>
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Service provided for:"/>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <CheckBox
-                    android:id="@+id/catService_chk"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:text="Cats"
-                    android:layout_weight="1"/>
-                <CheckBox
-                    android:id="@+id/dogService_chk"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:text="Dogs"
-                    android:layout_weight="1.1"/>
-                <CheckBox
-                    android:id="@+id/horseService_chk"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Horses"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:gravity="center">
-                <CheckBox
-                    android:id="@+id/birdService_chk"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:text="Birds"
-                    android:layout_weight="1"/>
-                <CheckBox
-                    android:id="@+id/farmAnimalService_chk"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:text="Farm Animals"
-                    android:layout_weight="1.1"/>
-                <CheckBox
-                    android:id="@+id/otherPetService_chk"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:text="Other Pets"
-                    android:layout_weight="1" />
             </LinearLayout>
         </LinearLayout>
 
