--- a/app/src/main/res/layout/list_item_advert.xml
+++ b/app/src/main/res/layout/list_item_advert.xml
@@ -10,22 +10,25 @@
 
     <ImageView
         android:id="@+id/list_deal_thumbnail"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
+        android:layout_width="0dp"
+        android:layout_height="80dp"
+        android:layout_weight="1"
         app:srcCompat="@drawable/dog_img"
-        android:background="@android:color/darker_gray"
-        android:padding="2dp"
+        android:background="@color/nice_light_gray"
+        android:padding="1.5dp"
         android:scaleType="centerCrop"
         android:adjustViewBounds="true"
         android:cropToPadding="true"
-        android:layout_margin="5dp"/>
+        android:layout_marginRight="2dp"
+        android:layout_marginEnd="2dp" />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_weight="3.5"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp">
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp">
         <TextView
             android:id="@+id/list_deal_title"
             android:layout_width="wrap_content"
@@ -33,7 +36,6 @@
             android:maxLines="2"
             android:ellipsize="end"
             tools:text="2 german shepard dogs for Sale"
-            android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="@color/colorPrimaryDark"/>
 
         <TextView
@@ -43,10 +45,8 @@
             tools:text="Location city, country"
             android:maxLines="1"
             android:ellipsize="end"
-            android:textAppearance="?android:attr/textAppearanceMedium"
             android:drawableStart="@drawable/ic_location_on_black_24dp"
-            android:drawableLeft="@drawable/ic_location_on_black_24dp"
-            android:drawablePadding="3dp"/>
+            android:drawableLeft="@drawable/ic_location_on_black_24dp"/>
 
         <ImageView
             android:layout_width="match_parent"
@@ -64,7 +64,6 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 tools:text="$5,000"
-                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="@color/primaryText"
                 android:layout_weight="1"/>
             <TextView
@@ -72,11 +71,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 tools:text="01/12/2016"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textSize="16sp"
+                android:scaleX=".9"
+                android:scaleY=".9"
                 android:drawableStart="@drawable/ic_access_time_black_24dp"
                 android:drawableLeft="@drawable/ic_access_time_black_24dp"
-                android:drawablePadding="3dp" />
+                android:drawablePadding="2dp"/>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
